# FGDB

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md
client/: .message.pl.swp  FGDB.pm  Makefile  message.pl  test.pl
include/: buffer.h  message.h  request.h  staff.h  tcp-server.h
legacy/: Makefile
src/: arena.c  arena.h  buffer.c  main.c  operations.c  request.c  staff.c  tcp-server.c  util.c
src/arena/: CMakeLists.txt  arena.c  arena.h  disk.c  disk.h  manager.c  meta.h
src/include/: common.h  config.h
src/lib/: CMakeLists.txt
src/lib/buddy/: CMakeLists.txt  memory.c  memory.h
src/lib/buddy/test/: main.c
src/lib/hashmap/: AVLNode.c  AVLNode.h  AVLnode.c  AVLnode.h  AVLnode_spesial.c  CMakeLists.txt  Hash.c  HashMap.c  HashMap.h  README.md  Util.c  example.c  hashf.c  mmain.c
src/lib/hashmap/test/: AVLNodeTest.c  AVLTest.h  HashMapTest.c
src/lib/heap/: CMakeLists.txt  heap.c
src/lib/log/: CMakeLists.txt  log.c  log.h
src/lib/vector/: CMakeLists.txt  vector.c  vector.h
src/lru/: CMakeLists.txt  lruq.c  lruq.h
src/memory/: CMakeLists.txt  hashmap.c  hashmap.h
src/message/: CMakeLists.txt  message.h
src/operations/: CMakeLists.txt  operations.c  operations.h
src/recovery/: CMakeLists.txt  recovery.c  recovery.h
src/server/: CMakeLists.txt  buffer.c  buffer.h  log.c  log.h  message.c  message.h  proto.c  proto.h  queue.c  queue.h  request.c  request.h  staff.c  staff.h  tcp-server.c  tcp-server.h
src/transactions/: CMakeLists.txt  queue.c  queue.h
src/wal/: CMakeLists.txt  wal.c  wal.h
test/: CMakeLists.txt  buffer.c  fgdb.c  log.c  msgpack.c  queue_test.c
test/hashmap/: main.c
test/memory/: main.c
